--- a/src/app/components/webcheckout/webcheckout.page.html
+++ b/src/app/components/webcheckout/webcheckout.page.html
@@ -31,10 +31,284 @@
           <img src="https://cdn-icons-png.flaticon.com/512/777/777205.png" style="width: 30px;">
           <span class="cart-count">0</span>
         </div>
+        <div>|</div>
+        <div class="">
+          <img src="https://cdn-icons-png.flaticon.com/512/5987/5987424.png" style="width: 30px;">
+        </div>
       </div>
 
     </div>
   </header>
+  <div class="website-body">
+    <section class="bg-silver-light pdt-105 pdb-80"
+      style="background-image: url(https://thetork.com/demos/html/uevent/assets/images/team/bg.png);background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-6">
+            <div class="page-wrapper">
+              <h2 class="heading">Event Checkout</h2>
+              <hr class="heading_space">
+              <div class="bg-orange check-out">
+                <div class="row">
+                  <div class="col-md-12">
+
+                    <section class="Event-Menu-List-section">
+                      <div class="Event-Menu-List">
+
+
+                        <div class="popular-inner-box">
+
+                          <form class="form">
+                            <div class="form-group">
+                              <div class="relative">
+                                <input class="form-control" id="name" type="date" pattern="[a-zA-Z\s]+" required=""
+                                  autofocus="" title="Username should only contain letters. e.g. Piyush Gupta"
+                                  autocomplete="" placeholder="Type your name here...">
+                                <i class="fa fa-calendar"></i>
+                              </div>
+                            </div>
+
+
+                            <div class="form-group">
+                              <div class="relative">
+                                <input class="form-control" type="text" required="" placeholder="How Many Members"
+                                  value="250">
+                                <i class="fa fa-user"></i>
+                              </div>
+                            </div>
+                            <div class="form-group">
+                              <div class="relative">
+                                <input class="form-control" type="text" id="menu" required=""
+                                  placeholder="Edit Your Menu">
+                                <i class="fa fa-suitcase"></i>
+                              </div>
+                            </div>
+                            <div class="form-group">
+                              <div class="relative">
+                                <input class="form-control" type="text" id="chef" required=""
+                                  placeholder="Edit Your Cheff" value="Hari Dasu">
+                                <i class="fa fa-user"></i>
+                              </div>
+                            </div>
+                            <div class="form-group ">
+                              <button class="custom-btn btn-7"><span>Order Value : $25,000/-</span></button>
+                            </div>
+
+
+                            
+
+                          </form>
+
+
+                        </div>
+
+
+                      </div>
+                    </section>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-6 col-md-6 col-sm-6 m-b30">
+            <div class="page-wrapper">
+              <h2 class="heading">Service Checkout</h2>
+              <hr class="heading_space">
+              <div class="accordion-group">
+                <div class="accordion">
+                  <input type="radio" class="ac-state" id="ac-1" name="ac-group-1">
+                  <label for="ac-1" class="ac-trigger" tabindex="0">
+                    <div class="ac-title">Poultry & Mutton (wholesaler)</div>
+                    <div class="ac-icon">
+                      <i class="ac-icon-close fa fa-plus"></i>
+                      <i class="ac-icon-open fa fa-minus"></i>
+                    </div>
+                  </label>
+                  <div class="ac-content">
+                    <div class="ac-content-inner">
+                      <div class="py-3 px-0">
+                        <div class="row">
+                          <div class="col-md-6">
+                            <div class="d-flex key-feature mb-2">
+                              <div class="icon text-center rounded-pill me-3">
+                                <img src="https://cdn-icons-png.flaticon.com/256/4050/4050257.png" class="align-middle"
+                                  style="height: 32px; width: 32px;" alt="">
+                              </div>
+                              <div class="flex-1">
+                                <h6 class="mb-0">Mutton</h6>
+                              </div>
+                              <div class="flex-1">
+                                <h6 class="mb-0">50kg</h6>
+                              </div>
+                              <div>
+                                <h6 class="mb-0 price">$55.00</h6>
+                              </div>
+                            </div>
+                            
+                            <div class="d-flex key-feature mb-2">
+                              <div class="icon text-center rounded-pill me-3">
+                                <img src="https://cdn3.iconfinder.com/data/icons/marine-life/100/04-512.png"
+                                  class="align-middle" style="height: 32px; width: 32px;" alt="">
+                              </div>
+                              <div class="flex-1">
+                                <h6 class="mb-0">prawns</h6>
+                              </div>
+                              <div class="flex-1">
+                                <h6 class="mb-0">50kg</h6>
+                              </div>
+                              <div>
+                                <h6 class="mb-0 price">$55.00</h6>
+                              </div>
+                            </div>
+                          </div>
+                          <div class="col-md-6">
+                            <div class="d-flex key-feature mb-2">
+                              <div class="icon text-center rounded-pill me-3">
+                                <img src="https://cdn-icons-png.flaticon.com/512/2002/2002611.png" class="align-middle"
+                                  style="height: 32px; width: 32px;" alt="">
+                              </div>
+                              <div class="flex-1">
+                                <h6 class="mb-0">Chicken</h6>
+                              </div>
+                              <div class="flex-1">
+                                <h6 class="mb-0">50kg</h6>
+                              </div>
+                              <div>
+                                <h6 class="mb-0 price">$55.00</h6>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="accordion">
+                  <input type="radio" class="ac-state" id="ac-2" name="ac-group-1">
+                  <label for="ac-2" class="ac-trigger" tabindex="0">
+                    <div class="ac-title">Kirana/grocery (wholesaler)</div>
+                    <div class="ac-icon">
+                      <i class="ac-icon-close fa fa-plus"></i>
+                      <i class="ac-icon-open fa fa-minus"></i>
+                    </div>
+                  </label>
+                  <div class="ac-content">
+                    <div class="ac-content-inner">
+                      <div class="py-3 px-0">
+                        <div class="row">
+                          <div class="col-md-6">
+                            <div class="d-flex key-feature mb-2">
+                              <div class="icon text-center rounded-pill me-3">
+                                <img src="https://cdn-icons-png.flaticon.com/512/541/541705.png" class="align-middle"
+                                  style="height: 32px; width: 32px;" alt="">
+                              </div>
+                              <div class="flex-1">
+                                <h6 class="mb-0">Rice</h6>
+                              </div>
+                              <div class="flex-1">
+                                <h6 class="mb-0">50kg</h6>
+                              </div>
+                              <div>
+                                <h6 class="mb-0 price">$55.00</h6>
+                              </div>
+                            </div>
+                          </div>
+                          <div class="col-md-6">
+                            
+                            <div class="d-flex key-feature mb-2">
+                              <div class="icon text-center rounded-pill me-3">
+                                <img
+                                  src="https://icons.veryicon.com/png/o/commerce-shopping/taofen-bar-category-icon-library/fresh-vegetables.png"
+                                  class="align-middle" style="height: 32px; width: 32px;" alt="">
+                              </div>
+                              <div class="flex-1">
+                                <h6 class="mb-0">vegtables </h6>
+                              </div>
+                              <div class="flex-1">
+                                <h6 class="mb-0">50kg</h6>
+                              </div>
+                              <div>
+                                <h6 class="mb-0 price">$55.00</h6>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="accordion">
+                  <input type="radio" class="ac-state" id="ac-3" name="ac-group-1">
+                  <label for="ac-3" class="ac-trigger" tabindex="0">
+                    <div class="ac-title">⁠Vegetables & leafs</div>
+                    <div class="ac-icon">
+                      <i class="ac-icon-close fa fa-plus"></i>
+                      <i class="ac-icon-open fa fa-minus"></i>
+                    </div>
+                  </label>
+                  <div class="ac-content">
+                    <div class="ac-content-inner">
+                     <div class="py-3 px-0">
+                        <div class="row">
+                          <div class="col-md-6">
+                            <div class="d-flex key-feature mb-2">
+                              <div class="icon text-center rounded-pill me-3">
+                                <img src="https://cdn-icons-png.flaticon.com/512/541/541705.png" class="align-middle"
+                                  style="height: 32px; width: 32px;" alt="">
+                              </div>
+                              <div class="flex-1">
+                                <h6 class="mb-0">Rice</h6>
+                              </div>
+                              <div class="flex-1">
+                                <h6 class="mb-0">50kg</h6>
+                              </div>
+                              <div>
+                                <h6 class="mb-0 price">$55.00</h6>
+                              </div>
+                            </div>
+                          </div>
+                          <div class="col-md-6">
+                            
+                            <div class="d-flex key-feature mb-2">
+                              <div class="icon text-center rounded-pill me-3">
+                                <img
+                                  src="https://icons.veryicon.com/png/o/commerce-shopping/taofen-bar-category-icon-library/fresh-vegetables.png"
+                                  class="align-middle" style="height: 32px; width: 32px;" alt="">
+                              </div>
+                              <div class="flex-1">
+                                <h6 class="mb-0">vegtables </h6>
+                              </div>
+                              <div class="flex-1">
+                                <h6 class="mb-0">50kg</h6>
+                              </div>
+                              <div>
+                                <h6 class="mb-0 price">$55.00</h6>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="form-group ">
+                              <button class="custom-btn btn-7"><span>Order Value : $25,000/-</span></button>
+                            </div>
+            </div>
+          </div>
+        </div>
+        <div class="tright mt-5">
+                              <a><button class="movebtn movebtnre" type="Reset"><i class="fa fa-long-arrow-left"
+                                    aria-hidden="true"></i> Back </button></a>
+                              <a><button class="movebtn movebtnsu" type="Submit">Proceed <i
+                                    class="fa fa-fw fa-paper-plane"></i></button></a>
+                            </div>
+      </div>
+    </section>
+  </div>
   <footer id="footer" class="footer light-background">
 
     <div class="container footer-top">
@@ -94,5 +368,4 @@
     </div>
 
   </footer>
-  </ion-content>
-  
+</ion-content>
