--- a/src/app/components/websitehome/websitehome.page.html
+++ b/src/app/components/websitehome/websitehome.page.html
@@ -31,6 +31,10 @@
           <img src="https://cdn-icons-png.flaticon.com/512/777/777205.png" style="width: 30px;">
           <span class="cart-count">0</span>
         </div>
+        <div>|</div>
+        <div class="">
+          <img src="https://cdn-icons-png.flaticon.com/512/5987/5987424.png" style="width: 30px;">
+        </div>
       </div>
 
     </div>
@@ -345,6 +349,7 @@
                                   <h4>Chicken Biryani</h4>
                                   <p>Juicy chicken cooked with aromatic spices and layered with fragrant basmati rice
                                   </p>
+                                   <a class="Bhagona-Btn mt-2">Add To Cart</a>
                                 </div>
                               </div>
                             </div>
@@ -369,6 +374,7 @@
                                   <h4>Prawn Biryani</h4>
                                   <p>Succulent prawns blended with coastal spices and fluffy rice for a seafood delight.
                                   </p>
+                                  <a class="Bhagona-Btn mt-2">Add To Cart</a>
                                 </div>
                               </div>
                             </div>
@@ -389,6 +395,7 @@
                                 <div class="Menu-Content">
                                   <h4>Mutton Biryani</h4>
                                   <p>Tender mutton slow-cooked in rich masala and layered with saffron-infused rice.</p>
+                                  <a class="Bhagona-Btn mt-2">Add To Cart</a>
                                 </div>
                               </div>
                             </div>
@@ -409,6 +416,7 @@
                                 <div class="Menu-Content">
                                   <h4>Egg Biryani</h4>
                                   <p>Boiled eggs in a spiced gravy, paired with flavorful rice for a hearty meal.</p>
+                                  <a class="Bhagona-Btn mt-2">Add To Cart</a>
                                 </div>
                               </div>
                             </div>
@@ -429,6 +437,7 @@
                                 <div class="Menu-Content">
                                   <h4>Fish Biryani</h4>
                                   <p>Fresh fish fillets marinated and cooked with herbs and long-grain rice.</p>
+                                  <a class="Bhagona-Btn mt-2">Add To Cart</a>
                                 </div>
                               </div>
                             </div>
@@ -449,6 +458,7 @@
                                 <div class="Menu-Content">
                                   <h4>Crab Biryani</h4>
                                   <p>Spicy crab meat simmered in masala and layered with aromatic rice.</p>
+                                  <a class="Bhagona-Btn mt-2">Add To Cart</a>
                                 </div>
                               </div>
                             </div>
@@ -470,6 +480,7 @@
                                   <h4>Chicken Biryani</h4>
                                   <p>Juicy chicken cooked with aromatic spices and layered with fragrant basmati rice
                                   </p>
+                                  <a class="Bhagona-Btn mt-2">Add To Cart</a>
                                 </div>
                               </div>
                             </div>
@@ -494,6 +505,7 @@
                                   <h4>Prawn Biryani</h4>
                                   <p>Succulent prawns blended with coastal spices and fluffy rice for a seafood delight.
                                   </p>
+                                  <a class="Bhagona-Btn mt-2">Add To Cart</a>
                                 </div>
                               </div>
                             </div>
@@ -517,6 +529,7 @@
                                   <h4>Chicken Biryani</h4>
                                   <p>Juicy chicken cooked with aromatic spices and layered with fragrant basmati rice
                                   </p>
+                                  <a class="Bhagona-Btn mt-2">Add To Cart</a>
                                 </div>
                               </div>
                             </div>
@@ -541,6 +554,7 @@
                                   <h4>Prawn Biryani</h4>
                                   <p>Succulent prawns blended with coastal spices and fluffy rice for a seafood delight.
                                   </p>
+                                  <a class="Bhagona-Btn mt-2">Add To Cart</a>
                                 </div>
                               </div>
                             </div>
@@ -561,6 +575,7 @@
                                 <div class="Menu-Content">
                                   <h4>Mutton Biryani</h4>
                                   <p>Tender mutton slow-cooked in rich masala and layered with saffron-infused rice.</p>
+                                  <a class="Bhagona-Btn mt-2">Add To Cart</a>
                                 </div>
                               </div>
                             </div>
@@ -581,6 +596,7 @@
                                 <div class="Menu-Content">
                                   <h4>Egg Biryani</h4>
                                   <p>Boiled eggs in a spiced gravy, paired with flavorful rice for a hearty meal.</p>
+                                  <a class="Bhagona-Btn mt-2">Add To Cart</a>
                                 </div>
                               </div>
                             </div>
