--- a/src/global.scss
+++ b/src/global.scss
@@ -795,7 +795,7 @@ input[type="checkbox"] {
   background-color: #fff0e3;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   overflow: hidden;
- border-radius: 12px;
+ border-radius: 0;
  flex-direction: column;
  align-items: center;
 }
@@ -1131,7 +1131,11 @@ button:hover {
   font-size: 14px;
   font-weight: 600;
 }
-
+.custom-btn:hover{
+   background: linear-gradient(0deg, rgba(255,151,0,1) 0%, rgba(251,75,2,1) 100%) !important;
+    text-decoration: none;
+    color: #fff;
+}
 
 
 
@@ -2891,6 +2895,7 @@ section-title {
 
 .thm-btn:hover {
   color: #fff;
+  text-decoration: none;
 }
 
 .thm-btn>span {
@@ -3329,7 +3334,12 @@ section-title {
 
 .header .header-social-links {
   padding-right: 15px;
+  display: flex;
+    align-items: center;
+    justify-content: center;
+    column-gap: 15px;
 }
+
 
 .header .header-social-links a {
   color: color-mix(in srgb, #0a0f14, transparent 40%);
@@ -3713,15 +3723,15 @@ border-radius: 20px !important;
     text-decoration: none;
 }
 
-h1 {
-    font-family: 'Kaushan Script', cursive;
-    text-align: left;
-    width: 37%;
-    margin-bottom: 20px;
-    font-size: 40px;
-    color: #333;
-    text-shadow: 0 0 5px rgba(0, 0, 0, .05), 0 1px 3px rgba(0, 0, 0, .10), 0 3px 5px rgba(0, 0, 0, .10), 0 5px 10px rgba(0, 0, 0, .10), 0 10px 10px rgba(0, 0, 0, .10);
-}
+// h1 {
+//     font-family: 'Kaushan Script', cursive;
+//     text-align: left;
+//     width: 37%;
+//     margin-bottom: 20px;
+//     font-size: 40px;
+//     color: #333;
+//     text-shadow: 0 0 5px rgba(0, 0, 0, .05), 0 1px 3px rgba(0, 0, 0, .10), 0 3px 5px rgba(0, 0, 0, .10), 0 5px 10px rgba(0, 0, 0, .10), 0 10px 10px rgba(0, 0, 0, .10);
+// }
 
 .m-b30 {
     margin-bottom: 30px;
@@ -4274,7 +4284,7 @@ border: 3.5px dashed transparent;
     }
 }
 
-.nav-tabs {
+.menu-data .nav-tabs {
         display: inline-flex;
         width: 100%;
         overflow-x: auto;
@@ -4284,23 +4294,24 @@ border: 3.5px dashed transparent;
         align-items: center;
         justify-content: center;
 }
-        .nav-tabs>li.active>a,
-        .nav-tabs>li.active>a:focus,
-        .nav-tabs>li.active>a:hover {
+        .menu-data .nav-tabs>li.active>a,
+        .menu-data .nav-tabs>li.active>a:focus,
+         .menu-data .nav-tabs>li.active>a:hover {
             border-width: 0;
+            background: transparent;
         }
-        .nav-tabs>li>a {
+         .menu-data .nav-tabs>li>a {
             border: none;
             color: #fff4b8;
             font-size: 16px;
         }
-        .nav-tabs>li.active>a,
-        .nav-tabs>li>a:hover {
+         .menu-data .nav-tabs>li.active>a,
+         .menu-data .nav-tabs>li>a:hover {
             border: none;
             color: #e4c815 !important;
             background: transparent;
         }
-        .nav-tabs>li>a::after {
+         .menu-data .nav-tabs>li>a::after {
             content: "";
             background: #e4c815;
             height: 2px;
@@ -4311,77 +4322,25 @@ border: 3.5px dashed transparent;
             transition: all 250ms ease 0s;
             transform: scale(0);
         }
-        .nav-tabs>li.active>a::after,
-        .nav-tabs>li:hover>a::after {
+         .menu-data .nav-tabs>li.active>a::after,
+         .menu-data .nav-tabs>li:hover>a::after {
             transform: scale(1);  
         }
-        .tab-nav>li>a::after {
+         .menu-data .tab-nav>li>a::after {
             background: #21527d none repeat scroll 0% 0%;
             color: #fff;
         }
-        .tab-pane {
+         .menu-data .tab-pane {
             padding: 15px 0;
         }
-        .tab-content {
+         .menu-data .tab-content {
             padding: 20px
         }
 
-        .nav-tabs::-webkit-scrollbar {
-            display: none; // Safari and Chrome
-        }
-        .nav-tabs {
-        display: inline-flex;
-        width: 100%;
-        overflow-x: auto;
-        border-bottom: 2px solid transparent;
-        -ms-overflow-style: none; // IE 10+
-        overflow: -moz-scrollbars-none; // Firefox}
-        .nav-tabs>li.active>a,
-        .nav-tabs>li.active>a:focus,
-        .nav-tabs>li.active>a:hover {
-            border-width: 0;
-        }
-        .nav-tabs>li>a {
-            border: none;
-            color: #666;
-        }
-        .nav-tabs>li.active>a,
-        .nav-tabs>li>a:hover {
-            border: none;
-            color: #e4c815 !important;
-            background: transparent;
-        }
-        .nav-tabs>li>a::after {
-            content: "";
-            background: #e4c815;
-            height: 2px;
-            position: absolute;
-            width: 100%;
-            left: 0px;
-            bottom: 1px;
-            transition: all 250ms ease 0s;
-            transform: scale(0);
-        }
-        .nav-tabs>li.active>a::after,
-        .nav-tabs>li:hover>a::after {
-            transform: scale(1);  
-        }
-        .tab-nav>li>a::after {
-            background: #21527d none repeat scroll 0% 0%;
-            color: #fff;
-        }
-        .tab-pane {
-            padding: 15px 0;
-        }
-        .tab-content {
-            padding: 20px
-        }
-
-        .nav-tabs::-webkit-scrollbar {
+         .menu-data .nav-tabs::-webkit-scrollbar {
             display: none; // Safari and Chrome
         }
        
-        }
         .cont-sec{
           display: flex;
     align-items: center;
