--- a/src/app/components/review/review.page.html
+++ b/src/app/components/review/review.page.html
@@ -31,6 +31,10 @@
           <img src="https://cdn-icons-png.flaticon.com/512/777/777205.png" style="width: 30px;">
           <span class="cart-count">0</span>
         </div>
+        <div>|</div>
+        <div class="">
+          <img src="https://cdn-icons-png.flaticon.com/512/5987/5987424.png" style="width: 30px;">
+        </div>
       </div>
 
     </div>
