--- a/src/app/components/customerorders/customerorders.page.scss
+++ b/src/app/components/customerorders/customerorders.page.scss
@@ -10,8 +10,8 @@
 .order-card-header h3{
         margin: 0;
    
-    font-size: 20px;
-    font-weight: bold;
+    font-size: 18px;
+    font-weight: 600;
     color: #fff;
 }
 .order-card {
