--- a/src/app/components/orderconfirm/orderconfirm.page.scss
+++ b/src/app/components/orderconfirm/orderconfirm.page.scss
@@ -114,6 +114,7 @@ button.secondary:active {
   background-color: #fff9f4;
   border-radius: 7px;
   box-sizing: border-box;
+  
 }
 
 /*
@@ -247,7 +248,7 @@ A border-top applied to parent would curve due to border-radius.
     background-size: 24px 24px;
     background-image: linear-gradient(to right, #e7e9e7 1px, transparent 1px), linear-gradient(to bottom, #e7e9e7 1px, transparent 1px);
     background-color: #eff1ef;
-    
+    z-index: -1;
     color: #1d211c;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
@@ -259,6 +260,7 @@ A border-top applied to parent would curve due to border-radius.
     height: 100%;
     left: 0;
     top: 0;
+    z-index: -1;
     background-size: 96px 96px;
     background-image: linear-gradient(to right, #dfe2df 1px, transparent 1px), linear-gradient(to bottom, #dfe2df 1px, transparent 1px);
 }
