--- a/src/app/components/review/review.page.html
+++ b/src/app/components/review/review.page.html
@@ -17,7 +17,7 @@
         <ul>
           <li><a href="#hero" class="active">Home</a></li>
           <li><a href="#about">About</a></li>
-          <li><a href="#resume">Resume</a></li>
+          <li><a href="#Orders">Orders</a></li>
           <li><a href="#portfolio">Portfolio</a></li>
           <li><a href="#services">Services</a></li>
 
