--- a/src/app/components/profile/profile.page.html
+++ b/src/app/components/profile/profile.page.html
@@ -1,13 +1,295 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>profile</ion-title>
-  </ion-toolbar>
-</ion-header>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">profile</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <header id="header" class="header d-flex align-items-center sticky-top">
+    <div
+      class="header-container container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
+
+      <a href="index.html" class="logo d-flex align-items-center me-auto me-xl-0">
+        <img src="../../../assets/home-logo.png" style="width: 145px;">
+      </a>
+
+      <nav id="navmenu" class="navmenu">
+        <ul>
+          <li><a href="#hero" class="active">Home</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#Orders">Orders</a></li>
+          <li><a href="#portfolio">Portfolio</a></li>
+          <li><a href="#services">Services</a></li>
+
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+        <i class="mobile-nav-toggle d-xl-none bi bi-x"></i>
+      </nav>
+
+      <div class="header-social-links">
+        <div class="cart-icon" onclick="toggleCart()">
+          <img src="https://cdn-icons-png.flaticon.com/512/777/777205.png" style="width: 30px;">
+          <span class="cart-count">0</span>
+        </div>
+        <div>|</div>
+        <div class="">
+          <img src="https://cdn-icons-png.flaticon.com/512/5987/5987424.png" style="width: 30px;">
+        </div>
+      </div>
+
+    </div>
+  </header>
+  <div class="website-body" style="padding: 100px 0;">
+    <div class="container profile-card">
+      <div class="row">
+        <div class="col-md-6">
+           <div class="row">
+                    <div class="col-xl-12">
+                        <div class="card custom-card">
+                            <div class="card-body pb-0 position-relative">
+                                <div class="profile-banner-img"> <img
+                                        src="https://images.pexels.com/photos/2894957/pexels-photo-2894957.jpeg?cs=srgb&dl=pexels-mdsnmdsnmdsn-2894957.jpg&fm=jpg"
+                                        class="rounded w-100" alt="..."> </div> <span
+                                    class="profile-avatar profile-avatar-xxl profile-avatar-rounded bg-light"> <img
+                                        src="https://codeigniter.spruko.com/zynix/zynix/assets/images/faces/2.jpg"
+                                        alt="">
+                                </span>
+                                <div class="mt-4 mb-0 p-4 ">
+                                    <div>
+                                        <h5 class="fw-semibold mb-3">Abigail Scott</h5>
+                                    </div>
+                                    <div class="d-flex mb-0 flex-wrap gap-4">
+                                        <div
+                                            class="px-4 py-2  rounded-pill d-flex align-items-center border gap-3">
+                                            <div class="main-card-icon primary">
+                                                <div
+                                                    class="profile-avatar profile-avatar-md profile-avatar-rounded bg-primary-transparent svg-primary border border-primary border-opacity-25">
+                                                    <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em"
+                                                        viewBox="0 0 24 24">
+                                                        <path fill="currentColor"
+                                                            d="M3.555 14.257c-.718-3.353-1.078-5.03-.177-6.143C4.278 7 5.993 7 9.422 7h5.156c3.43 0 5.143 0 6.044 1.114s.541 2.79-.177 6.143l-.429 2c-.487 2.273-.73 3.409-1.555 4.076S16.474 21 14.15 21h-4.3c-2.324 0-3.486 0-4.31-.667c-.826-.667-1.07-1.803-1.556-4.076z"
+                                                            opacity=".5"></path>
+                                                        <path fill="currentColor"
+                                                            d="M8 11.25a.75.75 0 0 0 0 1.5h8a.75.75 0 0 0 0-1.5zM9.25 15a.75.75 0 0 1 .75-.75h4a.75.75 0 0 1 0 1.5h-4a.75.75 0 0 1-.75-.75">
+                                                        </path>
+                                                        <path fill="currentColor" fill-rule="evenodd"
+                                                            d="M14.665 2.33a.75.75 0 0 1 1.006.335l3 6a.75.75 0 1 1-1.342.67l-3-6a.75.75 0 0 1 .336-1.006m-5.33.001a.75.75 0 0 0-1.006.335l-3 6a.75.75 0 1 0 1.342.67l3-6a.75.75 0 0 0-.336-1.006"
+                                                            clip-rule="evenodd"></path>
+                                                    </svg>
+                                                </div>
+                                            </div>
+                                            <div class="main-card-content ">
+                                                <p>Total Orders</p>
+                                                <h4>113</h4>
+                                            </div>
+                                        </div>
+                                        <div
+                                            class="px-4 py-2  rounded-pill d-flex align-items-center border  gap-3 ">
+                                            <div class="main-card-icon secondary">
+                                                <div
+                                                    class="profile-avatar profile-avatar-rounded profile-avatar-md bg-secondary-transparent svg-secondary border border-secondary border-opacity-25">
+                                                    <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em"
+                                                        viewBox="0 0 24 24">
+                                                        <g fill="none" stroke="currentColor" stroke-linecap="round"
+                                                            stroke-width="1.5">
+                                                            <path
+                                                                d="M12 15.333c1.105 0 2-.746 2-1.666S13.105 12 12 12s-2-.746-2-1.667c0-.92.895-1.666 2-1.666m0 6.666c-1.105 0-2-.746-2-1.666m2 1.666V16m0-8v.667m0 0c1.105 0 2 .746 2 1.666">
+                                                            </path>
+                                                            <path
+                                                                d="M17 3.338A9.95 9.95 0 0 0 12 2C6.477 2 2 6.477 2 12c0 1.6.376 3.112 1.043 4.453c.178.356.237.763.134 1.148l-.595 2.226a1.3 1.3 0 0 0 1.591 1.592l2.226-.596a1.63 1.63 0 0 1 1.149.133A9.96 9.96 0 0 0 12 22c5.523 0 10-4.477 10-10c0-1.821-.487-3.53-1.338-5">
+                                                            </path>
+                                                        </g>
+                                                    </svg>
+                                                </div>
+                                            </div>
+                                            <div class="main-card-content">
+                                                <p>Wallet Points</p>
+                                                <h4>113</h4>
+                                            </div>
+                                        </div>
+                                        <div
+                                            class="px-4 py-2  rounded-pill d-flex align-items-center border gap-2 ">
+                                            <div class="main-card-icon success">
+                                                <div
+                                                    class="profile-avatar profile-avatar-rounded profile-avatar-md bg-success-transparent svg-success border border-success border-opacity-25">
+                                                    <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em"
+                                                        viewBox="0 0 24 24">
+                                                        <path fill="none" stroke="currentColor" stroke-linecap="round"
+                                                            stroke-width="1.5"
+                                                            d="M21.984 10c-.037-1.311-.161-2.147-.581-2.86c-.598-1.015-1.674-1.58-3.825-2.708l-2-1.05C13.822 2.461 12.944 2 12 2s-1.822.46-3.578 1.382l-2 1.05C4.271 5.56 3.195 6.125 2.597 7.14C2 8.154 2 9.417 2 11.942v.117c0 2.524 0 3.787.597 4.801c.598 1.015 1.674 1.58 3.825 2.709l2 1.049C10.178 21.539 11.056 22 12 22s1.822-.46 3.578-1.382l2-1.05c2.151-1.129 3.227-1.693 3.825-2.708c.42-.713.544-1.549.581-2.86M21 7.5l-4 2M12 12L3 7.5m9 4.5v9.5m0-9.5l4.5-2.25l.5-.25m0 0V13m0-3.5l-9.5-5">
+                                                        </path>
+                                                    </svg>
+                                                </div>
+                                            </div>
+                                            <div class="main-card-content">
+                                                <p>Order Shipped</p>
+                                                <h4>113</h4>
+                                            </div>
+                                        </div>                                        
+                                        
+                                    </div>
+                                </div>
+
+                            </div>
+                        </div>
+                    </div>
+
+
+                </div>
+        </div>
+        <div class="col-md-6">
+          <div class="card custom-card">
+  <!-- Radio buttons for tab logic -->
+  <input type="radio" name="tab" id="tab1" checked>
+  <input type="radio" name="tab" id="tab2">
+  <input type="radio" name="tab" id="tab3">
+
+  <!-- Tab Labels -->
+  <div class="tabs">
+    <label for="tab1">Profile</label>
+    <label for="tab2">Orders</label>
+    <label for="tab3">Settings</label>
+  </div>
+
+  <!-- Tab Contents -->
+  <div id="content1" class="tab-content">
+    <form>
+    <div class="form-group">
+      <label for="fullname">Full Name</label>
+      <input type="text" class="form-control" id="fullname" placeholder="Enter your full name" value="John Doe">
+    </div>
+
+    <div class="form-group">
+      <label for="email">Email address</label>
+      <input type="email" class="form-control" id="email" placeholder="Enter email" value="john@example.com">
+    </div>
+
+    <div class="form-group">
+      <label for="phone">Phone number</label>
+      <input type="tel" class="form-control" id="phone" placeholder="Enter phone number" value="+91 9876543210">
+    </div>
+
+    
+    <button type="submit" class="bhagona-btn-2 mt-3">Save Changes</button>
+  </form>
+  </div>
+
+  <div id="content2" class="tab-content">
+     <table>
+    <thead>
+      <tr>
+        <th>Order ID</th>
+        <th>Date</th>
+        <th>Items</th>
+        <th>Status</th>
+        <th>Total</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td data-label="Order ID">#1001</td>
+        <td data-label="Date">May 10, 2025</td>
+        <td data-label="Items">Bluetooth Speaker, Cable</td>
+        <td data-label="Status"><span class="status delivered">Delivered</span></td>
+        <td data-label="Total">₹1,499</td>
+      </tr>
+      <tr>
+        <td data-label="Order ID">#1002</td>
+        <td data-label="Date">Apr 25, 2025</td>
+        <td data-label="Items">Smart Watch</td>
+        <td data-label="Status"><span class="status transit">In Transit</span></td>
+        <td data-label="Total">₹2,299</td>
+      </tr>
+      <tr>
+        <td data-label="Order ID">#1003</td>
+        <td data-label="Date">Mar 30, 2025</td>
+        <td data-label="Items">USB Hub</td>
+        <td data-label="Status"><span class="status cancelled">Cancelled</span></td>
+        <td data-label="Total">₹799</td>
+      </tr>
+    </tbody>
+  </table>
+  </div>
+
+  <div id="content3" class="tab-content">
+   <form>
+    
+    <div class="form-group">
+      <label for="password">New Password</label>
+      <input type="password" class="form-control" id="password" placeholder="Enter new password">
+    </div>
+
+    <div class="form-group">
+      <label for="confirmPassword">Confirm Password</label>
+      <input type="password" class="form-control" id="confirmPassword" placeholder="Confirm new password">
+    </div>
+
+    <button type="submit" class="bhagona-btn-2 mt-3">Save Changes</button>
+  </form>
+  </div>
+</div>
+        </div>
+      </div>
+    </div>
+   
+  </div>
+  <footer id="footer" class="footer light-background">
+
+    <div class="container footer-top">
+      <div class="row gy-4">
+        <div class="col-lg-5 col-md-12 footer-about">
+          <a href="index.html" class="logo d-flex align-items-center">
+            <img src="../../../assets/home-logo.png" style="width: 145px;">
+          </a>
+          <p>Cras fermentum odio eu feugiat lide par naso tierra. Justo eget nada terra videa magna derita valies darta
+            donna mare fermentum iaculis eu non diam phasellus.</p>
+          <div class="social-links d-flex mt-4">
+            <a href=""><i class="fa fa-twitter"></i></a>
+            <a href=""><i class="fa fa-facebook"></i></a>
+            <a href=""><i class="fa fa-instagram"></i></a>
+            <a href=""><i class="fa fa-linkedin"></i></a>
+          </div>
+        </div>
+
+        <div class="col-lg-2 col-6 footer-links">
+          <h4>Useful Links</h4>
+          <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About us</a></li>
+            <li><a href="#">Services</a></li>
+            <li><a href="#">Terms of service</a></li>
+            <li><a href="#">Privacy policy</a></li>
+          </ul>
+        </div>
+
+        <div class="col-lg-2 col-6 footer-links">
+          <h4>Our Services</h4>
+          <ul>
+            <li><a href="#">Marriage</a></li>
+            <li><a href="#">Baby Shower</a></li>
+            <li><a href="#">Engagement</a></li>
+            <li><a href="#">Birthday</a></li>
+            <li><a href="#">Puberty Ceremony</a></li>
+            <li><a href="#">Funeral</a></li>
+          </ul>
+        </div>
+
+        <div class="col-lg-3 col-md-12 footer-contact text-center text-md-start">
+          <h4>Contact Us</h4>
+          <p>A108 Adam Street</p>
+          <p>New York, NY 535022</p>
+          <p>United States</p>
+          <p class="mt-4"><strong>Phone:</strong> <span>+1 5589 55488 55</span></p>
+          <p><strong>Email:</strong> <span>infoexample.com</span></p>
+        </div>
+
+      </div>
+    </div>
+
+    <div class="container copyright text-center mt-4">
+      <p>Copyright © 2025, All Right Reserved Bhagona</p>
+
+    </div>
+
+  </footer>
 </ion-content>
